some fixes & add project featrue
